# job-application-agent

./: .gitignore  LICENSE  README.md  preferences.json  pyproject.toml  run_mock_test.py  test_gemma_litellm.py  user_profile.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
output/: brave_search_task.json  fetch_job_task.json
src/: config_manager.py  crawler_engine.py  llm_service.py  main.py  mock_runner.py  models.py  orchestrator.py
tests/: mock_data.py  test_llm_utils.py  test_orchestrator_utils.py  test_profile_env.py
